@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX 47_mod_dav_svn.conf 422 SHA256 bdb10203ae3154da723655b07118f630ef1e83ec38a79e31a53e436e0c071d27 SHA512 05608aa7abca0ec55015232077db928453c92ccf8b595dd843ba13ed39703e01dcbe298c4ff57c638376679be9fea4b409e98953915b86dc6954e3e0de31b23d WHIRLPOOL 05f1048e41c9c59718fc794ae53de532565447186a2cef45a222bee3d45071976037cc2aa3d90b27df1c02c01ce262c7b8030c4ad021cd597f277b8b48c7d976
 AUX 70svn-gentoo.el 443 SHA256 23aa9effa5aea7ae73d14ae4df1a9269135137a5e483b4ff2a501dc130d7d1be SHA512 ab105533569ec81631491da4cd29488e77ae5713b5a2190afe1576e6434202a0c36fce7674cdf17a3e1e58650efba8915fb7e31c686def3701ef82803ecf8bea WHIRLPOOL 4f699ca38a1659ac2129f36de37ddd830d026520c1bf34562181ceb4763a38362cc3df516c3077ddbd66f36973d0c82f2d51d3a4657ba0af3722e61b29b4a53f
 AUX subversion-1.5.4-interix.patch 4375 SHA256 1cb7dec795921a89e90f792d0176c52239aa3d87064bafbd5af9ded4df981dbe SHA512 e63c49ae3935be14437702136175d38fac1a820ccc641eb9d94e51d89986847a408b49995c01dcfa4d45c3bf04c94134def117ff27802b3eb02a6268d6032b75 WHIRLPOOL 77d60f127f2132c6e5a8a00f4f6603dfeec8708b36dbbac8d806dc0bedcfd36426661adff6c49895c73dfb16883e18e0cdbc81f3a43d3f1ecace744a25a394a7
@@ -17,11 +20,20 @@ DIST subversion-1.8.13.tar.bz2 6863330 SHA256 1099cc68840753b48aedb3a27ebd1e2afb
 DIST subversion-1.8.14.tar.bz2 6850562 SHA256 7f3883cdfcad4174e06dd94d6e3e8ec91856823268eebe60c924be76f5229a1f SHA512 95e1501494f5355f0c331fbe81422ca8f0b4d69e6d303125f4a5aac5f6fe946e958ca76fc96fe6b096cc0a530634ca103bf35622c12af90489ae17d0b9a9d987 WHIRLPOOL 0323746d40830109e081e002f499f1c73c15fe77acd4f1c9b790ae12440b3361d189f1d5212d49ba6f6c449297aec3513761375f748800686892607705310a56
 DIST subversion-1.9.0.tar.bz2 7743404 SHA256 fcb11db07e132cac6c72a969e222a592f849ef34dd8bd1c2f99fa1ad267a3fe6 SHA512 3f1100802cd11f268a5247f5eebd9be9a8a15488fab3e396c4e0364abbaadd611bbcccc0a5d4c6ca3eee3911e70f2cec0ff660259bb225be47f1909fd6367b3e WHIRLPOOL dc2875ee6fa911babdac86455b67af618056d72a709170666e21e826bb3a465a60f9e5b5df02170107208cbded4aecd49cb7e805d3713c671dabfb884f7abbb7
 EBUILD subversion-1.7.20.ebuild 14607 SHA256 4f20fa11a4b7b33f2a4b705f77305ff959ec7061171d8f7f3b6ba7734b48058b SHA512 dc22cd8549452bdec56c923b7d6029a0c2877cb7fffe07b1b0d906c66b57387808c684b1434a6893d0dcff16daa1d764ed685169db50d2ad391d4fa3363c7ee6 WHIRLPOOL 23cc0bf7f1d95a12ca3082723a9b8928495397177bf53c9bdfe85d65eea75d601e18a8ff7cba61570435e4422d1a74fa6ebe6bab09fa68e8c820fc12a3240dec
-EBUILD subversion-1.7.21.ebuild 14616 SHA256 fb499a590c19277bdf10d0f7ac1c8eee6cdbec3c567bd9f28092315afd33fbeb SHA512 cdf1794400a18342dc621bbf4e1079959a208fb062ca1e32d775cfb6363cc7426cd8860d9e863da25d6b6e7febf66667d3f2375dd1033d5be38e0fb8b4b46108 WHIRLPOOL edddaa725352372b0d29542695666092cbc934ff0be8bece8431678adbece282cbc9ba99d77084cbe635d7908f9c4e34f34c988c70719be6e07f585de15d1c0e
+EBUILD subversion-1.7.21.ebuild 14617 SHA256 3f85848f1ab728334b6f3ddf75d9f647a14815ea8c06539b7bde351cfcbb0201 SHA512 03a50f3c103fb4238fad8898d22e94957f0701ba71e8375807a0bbb629b7c7d6b716f0cef53cf9d6cafc6f1f358b3db2286baaf98d9e6dd9b59c8fcfb26a5828 WHIRLPOOL 03e002d9f9e6b2c98448995c241510fba618db289c2027c52dc22304d232c481735a1be7c79af4b907fba4db950223f42295b10d02edb87fa68870cedf90113b
 EBUILD subversion-1.8.13-r1.ebuild 15421 SHA256 8c93ef2249c59bd57b4f1b99c19c2016f6225ab7a775b787cff428a8b2acf33a SHA512 7246ac98c6e95c1f2942a0d52d024b26a879068e16d49bf7109459c5f1a6bf5d67c7d78643c74ff7a2e7bc862386dfa3729d62d3190d6aeb0acf1cdd0489a948 WHIRLPOOL 7cc95539f7c8f2e7b2c2d772834bcef2d4313e8c78a3cf0d1d0e65dca4b361f2c5fc0d803c54814f319bf5b8ecbc07bbb0c7df092289cfd1803623791ced5145
 EBUILD subversion-1.8.14-r1.ebuild 15438 SHA256 f4c013e1db402defc67e60a06814011b87c5bc499d172fffafe019ba0d70256d SHA512 8568ec3c70b109058670327949713ac0814713d5d081bc1c43c851a550348fe737655ad41352d49d4c2c0a8d92e4ddd917e32742fb61c39fc2dc7b45ea1124c8 WHIRLPOOL c17772216c0418cd21665c507e73bea95481724949a77f0e544c3566b8f878af9d2fd862ae19b58533ec418f7361c4333ea572425e9fbb0ae26a0c7b214e78f9
-EBUILD subversion-1.8.14.ebuild 15435 SHA256 b9f5604fce44abf242af71eaf9d0adc1f91384c97520d151dcc1a86d33eb9540 SHA512 abf2b92cc9099a91914c86e7a53873fd798b5d9823c84af64b5d8b8772e9019a9c45aa471852f5afe448ed0119c36a0c380f2aa3d26cfbbb24766033ebb96a14 WHIRLPOOL 8de111cedbebd2b74f9d3df196668763443b1367906707273b5a94850ff1013ef0f2d9e910f6c3dc9cd0303553f3aff080f33f63412a845738b8cf8390a3f486
+EBUILD subversion-1.8.14.ebuild 15429 SHA256 29e32d4cb4c0dd50c82b1874220dc3d23070d9d96a462e2be17a2587fa8d5a58 SHA512 08843b6d6dfa17f1aee7ef4490ba2f0d601717bb3ec2af00632ec19afd752c1132e2321e7cb66e999a54b6507d4694c7e68cb8c3f1e95f2de70e5dd01e9845d0 WHIRLPOOL 127417eef776e7b7af4dd16bd2330b34182729884eff5d6eef89706b5c0bf42fe3f020314f0e7851995ebc73b920fbbf674b6dbbbfb8cae6b5c00edf737031b9
 EBUILD subversion-1.9.0.ebuild 15434 SHA256 4ceecc409fd75d853dae52f4ec4ceeb1da14ec46ff082666184926c08401c43d SHA512 ce6b83690e235b9a67fe5642aeef9ee7293b7ee72f8b0fc124bd9e2ac9bd8de01ebc2f1eeb4f285d1e8a298b3fd4ec7e74e1a6e51c7c6345a1caa24c898f74fe WHIRLPOOL 1779049d430be6f026a3d54d07ebe681531bd15d82511c76ebabd5dbda6ae30e90cf9bac3956d927b9f504096022f410e5e9c863674c316bd19309994a16dd8f
-MISC ChangeLog 4249 SHA256 2d74ec84dc346994f984494b5010c75b603a8fdef9efde81ac2cd7e82c71f39f SHA512 e2aeb4d6989382e250f76d040f8818697ed9e15d228643f164cb47d0a70abf706a3fcaaa9fa3868525b0df23770b1e8a08098f8b22fc537c7dd5b4901cd91e63 WHIRLPOOL dfc3f90917976a3012aaf2bc602fe0ff1310f98140f860e3d2ef3bce89027f08500db5e8f220d27a036bf93d012bf1b3d87bcfdb96b51cfac5d852242c16a376
+MISC ChangeLog 4387 SHA256 389d31f921bfc8d145d3de1374464d517bb57d994543ce865c88b454f8285bbc SHA512 033346b5360ec4cc6312b7013c0b753b136a33b37e699b60387a7f5f52827f538be039a6ff4a243a146dd55eae50d05f8b0c68a6fcbfc010df065213166036f0 WHIRLPOOL bad15f85786fc33dab35ccbac37e4cd7ec5ea3f3b41d3b01347bd4cbbb4722815ee44738c945983b1c9076b83c7aab2138e48414584547d6aa5a74d4ec3dc96a
 MISC ChangeLog-2014 104501 SHA256 896e4b8534542aeb582ae3a2e1fcbabd0dacf246fb1f5090161d690164d4ee05 SHA512 6e188d0437e11b908983a6093afa19d17e4c7dce7763fb26ea9a94a70c520ab31ad78829f03443347db0d199c3d30d5a92d73d1e32827e82a1e58535b1808644 WHIRLPOOL 6ecb4ed382b6466e6fa2143b8e9133fce01fcbd57485533637b4cc13663a216c853dbd3c2b3af0d5fcfce0dd1aece589b5c5d9f3275caf89fd0200e64fcad947
 MISC metadata.xml 845 SHA256 43917d4b57c7ada945f07ca2507f6df3c83581931b8da7f4bef7eaa3bed0dbaf SHA512 8766f082f146c0d9ddb62f78dc0dfab5b480adddb1d7f1e0a07ac7aa11a2e70fd2aec534fe069eabfc86d75f9027162ed17d9463aa491ab87895934997005041 WHIRLPOOL 42bed6ad1d2cf349eab8d4011fc4fcce3c257a387a2c9c101c62c26058c218f195ef752715a5deac80dadbbeffbb088c37ea5d393f69751cdc78bdae2b982078
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iJwEAQEIAAYFAlXDuzgACgkQG9wOWsQutdb6mgP+JxHMWFCPTNAkJkp7Z6dZIAUn
+w7NdrxF9bjWKv3M9i2ceIpyDG5VjFwEF4G894/ErExKx/qtBun23tDN0x6KG/7JG
+RV3rQWyXhYmsXNxC8yk8dawwR/i94vgizvLqaGP+qzqwGMEL24nqowfftSAmmdIc
+1FKBh7f5TVdAYcBI73w=
+=lzSb
+-----END PGP SIGNATURE-----
