@@ -4,11 +4,11 @@ DESCRIPTION=Advanced version control system
 EAPI=5
 HOMEPAGE=http://subversion.apache.org/
 IUSE=apache2 berkdb ctypes-python debug doc +dso extras gnome-keyring java kde nls perl python ruby sasl test vim-syntax +webdav-neon webdav-serf apache2 python_targets_python2_7 elibc_FreeBSD java
-KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
+KEYWORDS=~alpha amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
 LICENSE=Subversion GPL-2
 RDEPEND=>=dev-db/sqlite-3.6.18[threadsafe(+)] >=dev-libs/apr-1.3:1 >=dev-libs/apr-util-1.3:1 dev-libs/expat sys-libs/zlib berkdb? ( >=sys-libs/db-4.0.14 ) ctypes-python? ( python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) gnome-keyring? ( dev-libs/glib:2 sys-apps/dbus gnome-base/libgnome-keyring ) kde? ( sys-apps/dbus dev-qt/qtcore:4 dev-qt/qtdbus:4 dev-qt/qtgui:4 >=kde-base/kdelibs-4:4 ) perl? ( dev-lang/perl:= ) python? ( python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) ruby? ( >=dev-lang/ruby-1.8.2:1.8 dev-ruby/rubygems[ruby_targets_ruby18] ) sasl? ( dev-libs/cyrus-sasl ) webdav-neon? ( >=net-libs/neon-0.28 ) webdav-serf? ( >=net-libs/serf-0.3.0 ) apache2? ( www-servers/apache[apache2_modules_dav] ) java? ( >=virtual/jre-1.5 ) kde? ( kde-apps/kwalletd:4 ) nls? ( virtual/libintl ) perl? ( dev-perl/URI ) apache2? ( =www-servers/apache-2* ) java? ( >=dev-java/java-config-2.2.0 )
 REQUIRED_USE=ctypes-python? ( || ( python_targets_python2_7 ) ) python? ( || ( python_targets_python2_7 ) ) test? ( || ( python_targets_python2_7 ) )
 SLOT=0
 SRC_URI=mirror://apache/subversion/subversion-1.7.21.tar.bz2
 _eclasses_=autotools	2264f05fbbbaaf83d34ec81e72b38ffd	bash-completion-r1	c8399c7c7ecbcf7ed6e5bd3abb3d4af3	db-use	82d0e62839f20e1e0d5a2259abd5316f	depend.apache	1a38534d3f755d1ab1d92ce120bd7dbd	distutils-r1	715b22a21726d3fd76b17e007c5daf5f	elisp-common	9a16929c1a6aec7e1c903289983e114c	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c9602887773166fe300444712fc7ff98	java-pkg-opt-2	f9bbbe5092225a2059aa9e6a3a2b52f1	java-utils-2	240e3f28c6b42b9f36d3c36b8b27fbb2	libtool	52d0e17251d04645ffaa61bfdd858944	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	62927b3db3a589b0806255f3a002d5d3	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	9ff260c452d420630500e700913be8d8	python-r1	d9c8348f26710ea523a385c2328cf027	python-utils-r1	0295a286ec27cab6af76b3b75ba07a3a	toolchain-funcs	42408102d713fbad60ca21349865edb4	unpacker	f300a7ca9131b1024a79762e8edd3c52	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=f5fd7d251cab08810f436d1f91fd9ab6
+_md5_=6c3632112472c251ab2a73947bda7fc7
