@@ -11,12 +11,12 @@ EBUILD efibootmgr-0.12.ebuild 905 SHA256 cc14be68e06fd6a9881a73ef47429c4d3a25d6c
 EBUILD efibootmgr-0.5.4-r1.ebuild 1020 SHA256 03a30c49b8e6116da18afb2105daaefcac8b0fb1dfc252d1aeb5ed48d703f725 SHA512 10f6e821e22368a04bea0ca990438138d14e6fe98aa1c593d9cc789340299f27155cde0ba2bbe545bf15e378be111394ebbae484a80693c636de5abcd4a3d190 WHIRLPOOL 589a8c6c5cb3913c86745f887a5d15118f532e158cffd0d01164d341838a8b3c2b0e26489dd4ae7f11f8525e8e43bf22ac4f580a745c454ef9b22f3416268ca7
 EBUILD efibootmgr-0.5.4.ebuild 973 SHA256 6501ab75b87492e74f68c918e4b66568fc6e1b5b1a7c521b922bd86b71a6af82 SHA512 8d3264a26b609e9950d2461dff9dc6223e5a68f9875c1ecc82a8b3a50fb27cb0a4226d33e35c51b5f66f7b434775fd83f8740fe064e319b183149d082001b3fc WHIRLPOOL bad060694c825a5ce7c88de6e335d5aae3d44cdc5a5e60689142834e70e1318ccbc7142f07a07d1424c650f9a5f5e3229fb82f168e3bc4f0a99959f5b51ea85a
 EBUILD efibootmgr-0.6.0.ebuild 1000 SHA256 3ef04ac090a386bf30ae200e45be1b72f0286c00310391614af483910af04b09 SHA512 3eb5b2015595cbec7852a61152b14afb25acb29d6a7f184de573f42b8139a7fd3eaa55173b1aee1533d56f66b201ca4e620318f33234a08e88012f2276ccbc46 WHIRLPOOL b7f6100a361ba1bdc64761053eef44a638fa4dd911a307f85a14cae86f461529f6ca5f3348c58fdf0f54f7e7628d0bba2ebe5156cdefb4dbb542d0b65fc551ab
-MISC ChangeLog 4693 SHA256 cb709aadcb7636a3e408ac8c0a668a86027a3236a4584d6aad0b01c66419e76e SHA512 69bf7d9ab6e55a2ed9080dd6fa82d6be3f8cb3019dd8b7dd29feb9d18e3e158ac4f193516c75c57eacf3de78d8bd5e1232931424beefe4041df1717693b8bba2 WHIRLPOOL 364ddd52a33669c33c43030e12faaad0377c5903f9f98bf65d3851b04a257d82224528c82f7ccd58b974ffe5d8072b69f09c03e1fe3e16fbff1794da01f5966b
-MISC metadata.xml 721 SHA256 2cd408b3fef01dddc0b14853a4eb8175dae030fe21a7a326279531bd1071c227 SHA512 c6e9a85ede378f46ac22c5cbfb6e8bb7753e1202ddbfc7fbeda07a6e2aea5894e0de85a9bc2c485ae16d3af2ee707f1dcdb8e94d60dbd7e5d2e74cbc1d938664 WHIRLPOOL d454adeddf3a181d5fbc6738102832237e98fc2ec9c0ee3a4bc94dea2f3b5be1167699e46eaa5dbfa5049f16e29d3b2e760f26fe67e33bad20b2377e2d5deb65
+MISC ChangeLog 4861 SHA256 3a9f4656ef0633e6e5955d5fdef616a11b143fea1d8744bec2d2314ce0695463 SHA512 91c64bcb503a1d879ef9398887a3753368f5c99019d6d2ee5553c7f9058609537d95c544622ff51ebd0d7f39a7f20dcd9c4e9ab7801310f17e82868cc02f8a8a WHIRLPOOL 8341eaecf11ad95f0f02c08d67090ac8644f87bbd3654e69df98fd28d5cafb12a04f04ff4ccac00255ea26d9947eb3d443a3a81dbd8a228bf78ccbe1889adde9
+MISC metadata.xml 662 SHA256 a330629c039b12ff4a884b60f953b5e7c2179b617abc2ba3b6814212872da549 SHA512 a3b9865bb8b17bcb7bea755258c7a3beb65a550eefd05b5e5f6e037bea38f3aade93bd90dd279ca44e3f4b7c99dfa806d48814df53d92eccabd3f23dad040934 WHIRLPOOL 8debd5bba7d510ca56d167f4f5b79b9d4bbf40912beaab542747eb409b685b511fe149d0c723525239f8deeec36007fa3538cd0414c4dfe28870a1ddc1034ea5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlWQncAACgkQRxvnM+8pGj9iAgEAox/RG3o/uRvX16nf9qkArWmW
-aQcd8ypo1Bt0CPhKl/8BAMvjEUmErmywVHNhTfBbw43SyfhIkVMyotmlMHSE8ah5
-=ldmN
+iF4EAREIAAYFAlXDtoMACgkQRxvnM+8pGj/sqwEAp9Ma4uFP52BZh5BorFVj+lh9
+uKXr9YRIOfmmsUdKQuQA/39MP52+rIrsXuV2mU86tDEfrNuBUqITGK7isDbqK3TP
+=TWjZ
 -----END PGP SIGNATURE-----
