@@ -8,12 +8,12 @@ DIST efivar-0.21.tar.bz2 66677 SHA256 04b9b9de9d9a1a013395400438a033daf4a4290f49
 EBUILD efivar-0.15.ebuild 621 SHA256 d5051f42e4bb127bc8c45a1c6545f0db8d568053437b294a42810d7efe7dd8ba SHA512 a3ec8bf3bc5d1e3e515a5edb7ad0ac2f84f22f00688095dfdbdf4916885345ea417598a2e8f860ff009aca0b6d1a37e4b73c9c1b1738577986459f1951d738dd WHIRLPOOL 3c1061b5ecf30b43128b5b9910ccf2c23ef51ba009ba2791e1e6086cafdb7a32fb963edf54988f548a12725635c05733d2d2352986e0723ff23e2ff2debc6635
 EBUILD efivar-0.20.ebuild 624 SHA256 3e456054d09f832797de7ea5cdaf31ed77113b63db52591a96da2d836d528a30 SHA512 2d80d1ba08120f5a1c4b99b90a7d8bfba4d001de642d88569fb8c9aee416a481e36987a59683717081c3057a05be61ba78801e284912b498ac7f8d6c2cd77d71 WHIRLPOOL 09157145fbab81d7f30d9d91acc3f3e470359525179ab94d5f83c1ef03bc7154b935706feeec8aab555443df82fe9613f2cedd8061df6e7527450dff6cdfbbb3
 EBUILD efivar-0.21.ebuild 695 SHA256 a6af270748c5aa88daea56db50f6ed90a0919ad1d2719e604c989ff1be9198c8 SHA512 e3963982934bf21e3309f3c9af6bf0a8b821be66fbfe6acd3f3532225fc5fa3e9ae8666de373bf755295961f1cda35c63a3e3dcad4f5e100d738b988fbed65f4 WHIRLPOOL 74cb8d270f0d094f34bc758653802489b231fc6ef1874415c2b4cbac64dfb264d8b540acdc94d41628d199281d385c0d2c63775037077047fa59d994b5bbaadb
-MISC ChangeLog 1311 SHA256 dd88f7429f27a75d15079b8fa57ed6bd5ac39cb11cae4b19024b786aa2ee2c41 SHA512 fc46295a92a424d4ee88fde31cdeb3c5e1cde5fef7242102322c2ae20a216c0bd6574d5bb45075385816f7bd28810f7fc61d2e794d78ef6cb3c4b019eee54bee WHIRLPOOL c44a85db1b840967683bd83653ea60b49d05f60aefa0f6edf6383818584053f3965bbd89738c459546c56a8931afd54c02fd8cc03584030bf73bbf477280e7b7
-MISC metadata.xml 508 SHA256 7dd402a7ff44021019e0f6a82414fd5c50b50d8ed78e49fc8608f71c11d58f5a SHA512 c5d92d7795124b9333f7d0cc22fa1db06e414afcb8e2eb0f521fa80c4fffa842fde4d57dfeddf14b71a3b2268ea4f15421ff9d13476f09bf2884c93a4d7cac25 WHIRLPOOL a0c1b72a887a59d73d20a5925047fd710b7ae668e8aa7ee1204761eda617c718487bc4bbad301162877bbf46baaeb04cb0e9edb1118df2fcd8ef19b0e6785ea6
+MISC ChangeLog 1400 SHA256 19acadd29d4ade26e28eb1b3c90b53fe7bd656c994429ddd2c0210a5c4781ef7 SHA512 a3ddd6f45f6b7d7f29435fea17bd76448dcaed5d15f06aa8e8824d7e1a92848c2ef19204cac4201c4a940103d6f874148f3e9b1726af99c9c778dab5f09598bc WHIRLPOOL 9a685232976e2381e39f103e98fb3df05c0c9ac1ef48ef063f5a2dbab414cd6de464bc775a8d9890cf1f9f2aafe2c102e16ac9c22e04d938f0039c2fcd319bed
+MISC metadata.xml 449 SHA256 1e4b3c8e6c01e7449bb66d704f7cc6d0e8ed59b14541f07dc1f7cf80abd6fb26 SHA512 6fb8c337a4e85e52a4d8e8710234816f6a82b0860d37a54a844f8bafce15cb9dc95611f0e3c463169b1bdcb844db112bd57daf84042ac3233475a81ed9050ddd WHIRLPOOL 0a96396ba55ed3bedd0842d4b7197481d14b123b1956504ba377cbe0d40cdd6e13ea60b6e4c1931073eba7ee062f4ea310875b593b7be95425715a9ef0a28def
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlWsIXMACgkQRxvnM+8pGj9iJAD9Fn7auJ9qt5XzIEYGLMBf6xmG
-c+anCsJr5QUkOFiHi6QBANW5UCZ7K7f543ODPdEp9JmEjclaqXR6BMAO4250aPfN
-=nof7
+iF4EAREIAAYFAlXDt4EACgkQRxvnM+8pGj+cygD/S/19CWSDXXygwinhNJRaTIX4
+anp/w6DPsg1+/rOv9lwBALY8KAzAEurMpV7BvPMwBcnuyURMkGj2Um7PnQ/B1SbX
+=G0wq
 -----END PGP SIGNATURE-----
