@@ -1,6 +1,12 @@
 # ChangeLog for sys-boot/efibootmgr
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-boot/efibootmgr/ChangeLog,v 1.36 2015/06/29 01:22:07 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-boot/efibootmgr/ChangeLog,v 1.38 2015/08/06 19:33:22 floppym Exp $
+
+  06 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Drop comment.
+
+  06 Aug 2015; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Re-order maintainers.
 
 *efibootmgr-0.12 (29 Jun 2015)
 
